--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
